fix: max-width, add spacing

--- a/src/styles/ftva/_footer-links.scss
+++ b/src/styles/ftva/_footer-links.scss
@@ -1,20 +1,24 @@
 .ftva.footer-links {
+    --unit-content-width: $ftva-container-max-width;
     background-color: #191919;
     color: white;
 
-    .link-list {
-        .link-list-label {
-            @include ftva-subtitle-1;
-            color: $grey-blue;
-            border-bottom: 1.5px $accent-blue solid;
-        }
+    .link-wrapper {
+        .link-list {
+            .link-list-label {
+                @include ftva-subtitle-1;
+                color: $grey-blue;
+                border-bottom: 1.5px $accent-blue solid;
+            }
 
-        ul {
-            li a {
-                color: white;
-                font-weight: 400;
-                &:hover {
-                    border-color: #41648C;
+            ul {
+                li a {
+                    color: white;
+                    font-weight: 400;
+
+                    &:hover {
+                        border-color: #41648C;
+                    }
                 }
             }
         }
