--- a/src/styles/ftva/_footer-primary.scss
+++ b/src/styles/ftva/_footer-primary.scss
@@ -1,4 +1,5 @@
 .ftva.footer-primary {
+    --unit-content-width: $ftva-container-max-width;
     background-color: $navy-blue;
     border-bottom: 0px;
 
@@ -42,7 +43,7 @@
 
         .footer-links {
             gap: 20px;
-            padding-top: 24px;
+            padding-top: 34px;
 
             .socials {
                 .social-item {
