--- a/src/styles/ftva/_footer-sock.scss
+++ b/src/styles/ftva/_footer-sock.scss
@@ -1,4 +1,5 @@
 .ftva.footer-sock {
+    --unit-content-width: $ftva-container-max-width;
     background-color: #191919;
 
     .container {
